fix:Fix-navbar-open-close-alignment
I added a margin to keep the open close icon in center with the website content or logo

--- a/src/output.css
+++ b/src/output.css
@@ -739,6 +739,18 @@ video {
   margin-top: 6.1rem;
 }
 
+.mt-auto{
+  margin-top: auto;
+}
+
+.mt-12{
+  margin-top: 3rem;
+}
+
+.mt-5{
+  margin-top: 1.25rem;
+}
+
 .flex{
   display: flex;
 }
